Next bunch of LLM fixes and refactorings